[JENKINS-38023] fix styling issue when wrapping in link / a tag

--- a/less/components/expandable-path.less
+++ b/less/components/expandable-path.less
@@ -18,10 +18,6 @@
         .path-item {
             display: inline-flex;
             align-items: center;
-
-            .separator {
-                padding: 0 4px;
-            }
         }
 
         /* always hide the last slash */
